Changed the additive paint to the default

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <button id="reset-grid-button">Reset</button>
 
         <select id="paint-type">
-            <option value="absolute" selected>Absolute Paint</option>
-            <option value="additive">Additive Paint</option>
+            <option value="additive" selected>Additive Paint</option>
+            <option value="absolute">Absolute Paint</option>
         </select>
     </div>
 
